Complete the item screening

--- a/app/css/maincon.css
+++ b/app/css/maincon.css
@@ -1,4 +1,16 @@
+.main-container{
+   width: 70%;
+   height: 70%;
+   display: flex;
+   flex-direction: column;
+   justify-content: flex-start;
+   align-items: center;
+   transition: all 0.3s ease;
+   background-color: transparent;
+}
+/*================ select panel ================*/
 .select-panel{
+   margin-bottom: 10px;
    display: flex;
    gap: 10px;
    border: 1px solid var(--border-color);
@@ -36,4 +48,34 @@
    cursor: not-allowed;
    padding-right: 36px; 
    background-size: 20px;
+}
+/* ============= item container =========== */
+.item-container{
+   width: 100%;
+   max-height: 80vh;
+}
+
+.item-search{
+   padding: 5px 5px;
+   appearance: none;
+   background-color: var(--background);
+   color: var(--text);
+   border: 2px solid var(--select-border);
+   font-size: 16px;
+   border-radius: 4px;
+   cursor: pointer;
+   outline: none;
+   transition: border-color 0.2s ease;
+   background-image: var(--select-search);
+   background-repeat: no-repeat;
+   background-position: right 5px center;
+   background-size: 18px;
+}
+.item-panel-container{
+   width: 100%;
+   height: 100%;
+   display: flex;
+   flex-direction: row;
+   justify-content: flex-start;
+   align-items: flex-start;
 }
