--- a/app/css/basicinput.css
+++ b/app/css/basicinput.css
@@ -56,6 +56,7 @@
    }
 }
 .basicinput-input{
+   width: 120px;
    padding: 3px 3px;
    appearance: none;
    background-color: var(--background);
