--- a/app/css/maincon.css
+++ b/app/css/maincon.css
@@ -54,17 +54,27 @@
 }
 /* =============craft container =========== */
 .craft-panel{
-
+   margin-bottom: 10px;
+   display: flex;
+   flex-direction: row;
+   flex-wrap: wrap;
+   justify-content: center;
+   align-items: center;
+   gap: 25px;
 }
 
 /* ============= item container =========== */
 .item-container{
+   padding: 10px;
    width: 100%;
    max-height: 80vh;
    overflow: auto;
    overflow-x: hidden;
    position: relative;
-   
+   border-radius: 10px;
+   border: 3px solid var(--card-border-color);
+   box-shadow: 4px 4px 0 var(--card-border-color);
+
    .item-list{
       display: flex;
       flex-direction: row;
