--- a/app/css/app.css
+++ b/app/css/app.css
@@ -12,6 +12,15 @@
    color: var(--background);
 }
 
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none;
+  margin: 0; 
+}
+input[type=number] {
+    -moz-appearance:textfield;
+}
+
 :root{
    --tiny-size: 12px;
    --small-size:14px;
