--- a/app/css/maincon.css
+++ b/app/css/maincon.css
@@ -82,8 +82,8 @@
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      justify-content: flex-start;
-      align-items: flex-start;
+      justify-content:flex-start;
+      align-items:flex-end;
    }
 }
 
@@ -94,7 +94,7 @@
    justify-content: flex-start;
    align-items: center;
    gap: 10px;
-   margin: 0 5px;
+   margin: 0 5px 6px 5px;
    width: 100%;
    height: 100%;
    .item-search{
